@@ -1,17 +1,13 @@
 package com.trianguloy.urlchecker.utilities.methods;
 
-import android.content.Context;
+import static com.trianguloy.urlchecker.utilities.methods.JavaUtils.sUTF_8;
+
 import android.content.Intent;
 import android.net.Uri;
-import android.os.Parcelable;
-import android.widget.Toast;
 
-import com.trianguloy.urlchecker.R;
 import com.trianguloy.urlchecker.utilities.wrappers.IntentApp;
 
 import java.net.URLDecoder;
-import java.util.ArrayList;
-import java.util.List;
 
 /** Static utilities related to urls */
 public interface UrlUtils {
@@ -23,35 +19,13 @@ public interface UrlUtils {
         return intent;
     }
 
-    /** Opens an [url] removing this app from the chooser */
-    static void openUrlRemoveThis(String url, Context cntx) {
-        // get intents that can open the url
-        var intents = new ArrayList<Intent>();
-        for (var pack : IntentApp.getOtherPackages(getViewIntent(url, null), cntx)) {
-            intents.add(getViewIntent(url, pack));
-        }
-
-        // check if none
-        if (intents.isEmpty()) {
-            Toast.makeText(cntx, R.string.toast_noBrowser, Toast.LENGTH_SHORT).show();
-            return;
-        }
-
-        // create chooser
-        var chooserIntent = Intent.createChooser(intents.remove(0), cntx.getString(R.string.title_choose));
-        chooserIntent.putExtra(Intent.EXTRA_INITIAL_INTENTS, intents.toArray(new Parcelable[0]));
-
-        // open
-        PackageUtils.startActivity(chooserIntent, R.string.toast_noBrowser, cntx);
-    }
-
     /** Calls URLDecoder.decode but returns the input string if the decoding failed */
     static String decode(String string) {
         try {
-            return URLDecoder.decode(string, "UTF-8");
+            return URLDecoder.decode(string, sUTF_8);
         } catch (Exception e) {
+            AndroidUtils.assertError("Unable to decode string", e);
             // can't decode, just leave it
-            e.printStackTrace();
             return string;
         }
     }
